force-app/main/default/objects/sked_Admin_Setting__c/fields/Auto_Dispatch_Duration__c.field-meta.xml
<CustomField>
    <fullName>Auto_Dispatch_Duration__c</fullName>
    <defaultValue>60</defaultValue>
    <inlineHelpText>If a job has been created and allocated and the status of the job is &quot;Pending Dispatch&quot;, and the start date is MORE than this number of days, then the job should be dispatched.</inlineHelpText>
    <label>Auto-Dispatch Duration</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>