force-app/main/default/objects/sked_Admin_Setting__c/fields/Google_Travel_Time_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Google_Travel_Time_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Google Travel Time Enabled</label>
    <type>Checkbox</type>
</CustomField>