force-app/main/default/objects/sked_Admin_Setting__c/fields/NAT_Break_Time__c.field-meta.xml
<CustomField>
    <fullName>NAT_Break_Time__c</fullName>
    <defaultValue>30</defaultValue>
    <label>NAT Break Time</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>