force-app/main/default/objects/sked_Admin_Setting__c/fields/NAT_Min_Duration_for_2nd_class__c.field-meta.xml
<CustomField>
    <fullName>NAT_Min_Duration_for_2nd_class__c</fullName>
    <defaultValue>120</defaultValue>
    <label>NAT Min Duration for 2nd class</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>