force-app/main/default/objects/sked_Admin_Setting__c/fields/NAT_Min_Duration_to_have_break__c.field-meta.xml
<CustomField>
    <fullName>NAT_Min_Duration_to_have_break__c</fullName>
    <defaultValue>300</defaultValue>
    <label>NAT Min Duration to have break</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>