force-app/main/default/objects/sked_Admin_Setting__c/fields/Respect_Holiday__c.field-meta.xml
<CustomField>
    <fullName>Respect_Holiday__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Respect Holiday</label>
    <type>Checkbox</type>
</CustomField>