force-app/main/default/objects/sked_Admin_Setting__c/fields/Scheduling_Email__c.field-meta.xml
<CustomField>
    <fullName>Scheduling_Email__c</fullName>
    <label>Scheduling Email</label>
    <type>Email</type>
</CustomField>